ImageViewer Release Notes
Author: Steve Corbett

Version 2.2 [TODO] - Maintenance release
  #32 - Allow extensions to change current image tab
  #31 - Handle ImageSet deletion
  #30 - Handle dynamic image tab panels
  #27 - Add ImageSet transient option
  #26 - Image set refactoring
  #23 - Keyboard shortcuts for image source
  #20 - Cosmetic fix in AboutDialog
  #19 - Image set dirty checking
  #18 - Allow removing images from image sets
  #16 - Intelligently change options based on view mode
  #15 - Improve MenuManager
  #14 - Image sets terminology
  #13 - Image sets persistence
  #12 - Make global keyboard support a bit smarter
  #11 - Image set persistence dir must be configurable
  #10 - Handle dead images in image set load
  #9 - Image set editor
  #8 - Right click and add to image set
  #7 - Context flipping between file system and image sets
  #6 - Image sets tree
  #3 - Add extension support for image tabs
  #2 - Add support for virtual directories (image sets)
  #1 - Upgrade to swing-extras 2.4

Version 2.1 [2025-07-22] - Migrate to github/maven
  Upgrade to swing-extras 2.3
  Migrate project to github/maven

Version 2.0 [2023-12-31] - Ground-up rewrite with extension support
  [IMGVIEW-89] - Add "Undo last move" option
  [IMGVIEW-92] - Crop aspect ratio labels seem wrong
  [IMGVIEW-100] - Two images with same base name confuses thumb panel
  [IMGVIEW-106] - Create ExtensionManager
  [IMGVIEW-107] - Remove TempImagePanel
  [IMGVIEW-108] - Rewrite application preferences
  [IMGVIEW-109] - Name conflict dialog needs to trim the filename
  [IMGVIEW-110] - Add built-in extension for thumbnail caching
  [IMGVIEW-111] - Extension point: menu additions
  [IMGVIEW-112] - Extension point: toolbar buttons
  [IMGVIEW-113] - Extension point: global shortcuts
  [IMGVIEW-114] - Add built-in extension for image information
  [IMGVIEW-115] - Extension point: LogConsole
  [IMGVIEW-116] - Move deletion stats to built-in extension